--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "RasbeeTech",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "serve-favicon": "^2.5.0"
   }
